RESOLVED FIXED162081
setAutomaticLinkDetection not working in WebKit2
https://bugs.webkit.org/show_bug.cgi?id=162081
Summary setAutomaticLinkDetection not working in WebKit2
Jonathan Bedard
Reported 2016-09-16 13:17:24 PDT
setAutomaticLinkDetection does not appear to function as expected in WebKit2. This is likely due to a bug in the test harness. The purpose of this bug is centralize a number of bugs which have reported side effects of this one.
Attachments
Ryosuke Niwa
Comment 1 2026-04-26 00:45:04 PDT
EWS
Comment 2 2026-04-26 11:21:57 PDT
Committed 312049@main (a340e58cf59a): <https://commits.webkit.org/312049@main> Reviewed commits have been landed. Closing PR #63621 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-26 11:22:12 PDT
Note You need to log in before you can comment on or make changes to this bug.