setAutomaticLinkDetection not working in WebKit2 https://bugs.webkit.org/show_bug.cgi?id=162081

Reviewed by Wenson Hsieh.

When layout tests call internals.setAutomaticLinkDetectionEnabled(true) (or similar toggles for
smart quotes, dash substitution, etc.), the WebProcess sends an async IPC message to the UIProcess
to toggle the state. The UIProcess updates its TextChecker state, but never notifies the WebProcess
back — so the WebProcess's cached textCheckerState() remains stale. When the editing code later
checks isAutomaticLinkDetectionEnabled(), it reads the stale cache and gets false.

This PR fixes the bug by propagating the toggle from UIProcess to all the WebProcesses involved.
Also toggle the WebProcess's cached textCheckerState immediately before sending the async IPC,
so the state is correct by the time the next line of JS executes.

Tests: editing/inserting/smart-quote-with-all-configurations.html
       editing/inserting/typing-space-to-trigger-smart-link.html
       fast/events/input-event-insert-link.html [ Failure ]

* LayoutTests/platform/mac-wk2/TestExpectations:
* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::textCheckerStateChanged):
(WebKit::WebPageProxy::toggleAutomaticQuoteSubstitution):
(WebKit::WebPageProxy::toggleAutomaticLinkDetection):
(WebKit::WebPageProxy::toggleAutomaticDashSubstitution):
(WebKit::WebPageProxy::toggleSmartLists):
(WebKit::WebPageProxy::toggleAutomaticTextReplacement):
* Source/WebKit/WebProcess/WebCoreSupport/mac/WebEditorClientMac.mm:
(WebKit::toggleTextCheckerState):
(WebKit::WebEditorClient::toggleAutomaticQuoteSubstitution):
(WebKit::WebEditorClient::toggleAutomaticLinkDetection):
(WebKit::WebEditorClient::toggleAutomaticDashSubstitution):
(WebKit::WebEditorClient::toggleAutomaticTextReplacement):
(WebKit::WebEditorClient::toggleSmartLists):

Canonical link: https://commits.webkit.org/312049@main